sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:13: error: not found: value compteur
    if (compteur == 0){
        ^AlgBubbleSort2:14: error: not found: value estTrie
    	estTrie = true
        ^