sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2()  {
  var nbValeurs = getNombreValeurs()
	for (j <- 0 to nbValeurs-1){
    for (i <- 0 to nbValeurs-j-2){
    	var compteur = 0
    	if (!plusPetit(i,i+1)){
        echange(i,i+1)
        compteur += 1
      }  

    }
    if (compteur == 0){
    	estTrie = true
    }
  }
}

